<resources>
    <string name="app_name">Our Diet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_personal">個人資料</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="title_home">Home</string>
    <string name="title_food">Food</string>
    <string name="title_groups">Groups</string>
    <string name="title_friends">Friends</string>
    <string name="home">Home</string>
    <string name="food">Food</string>
    <string name="groups">Groups</string>
    <string name="friends">Friends</string>

    <!--- Hint -->
    <string name="hint_email">請輸入電子郵箱</string>
    <string name="hint_password">請輸入密碼</string>
    <string name="hint_last_name">請輸入姓</string>
    <string name="hint_first_name">請輸入名字</string>
    <!--- Others -->
    <string name="send">登入</string>
    <string name="banner">banner</string>
    <string name="NotAccount">我還沒有帳號</string>
    <string name="personal">個人資料</string>
    <string name="setting">設定</string>
    <string name="logout">登出</string>
    <string name="user_image">使用者頭像</string>
    <string name="user_name">使用者名稱</string>
    <string name="user_email">使用者郵箱</string>
    <string name="btnRegister">註冊</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="forgotPassword">忘記密碼</string>
    <string name="UploadIMG">上傳頭像</string>
    <string name="hint_nickname">請輸入暱稱</string>
    <string name="hint_birthday">請輸入生日</string>
    <string name="hint_weight">請輸入體重（公斤）</string>
    <string name="communicate">Communicate</string>
    <string name="tvNickname">暱稱</string>
    <string name="tvBirthday">生日</string>
    <string name="tvHeight">身高</string>
    <string name="tvWeight">體重</string>
    <string name="tvGender">性別</string>
    <string name="btnPersonSend">送出</string>
    <string name="hint_height">請輸入身高（公分）</string>
    <string name="tv_brand">品牌</string>
    <string name="tv_foodName">食物名稱</string>
    <string name="tv_calories">熱量</string>
    <string name="tv_cho">碳水化合物</string>
    <string name="tv_prote">蛋白質</string>
    <string name="tv_fat">脂肪</string>
    <string name="tv_na">鈉</string>
    <string name="addingData">加入資料</string>
    <string name="tv_dailyRecommended">每日建議攝取</string>
    <string name="tv_recording">我的飲食記錄</string>
    <string name="addRecording">新增記錄</string>
    <string name="hint_selectMeal">[選擇一個餐類..]</string>
    <string name="meal_type">餐類</string>
    <string name="tv_Serving">份量</string>
    <string name="tv_date">日期</string>
    <string name="hint_dateTime">請選擇日期</string>
    <string name="breakfast">早餐</string>
    <string name="lunch">午餐</string>
    <string name="dinner">晚餐</string>
    <string name="snack">點心</string>
    <string name="btn_addFood">新增紀錄</string>
    <string name="defaultNumber">1</string>
    <string name="menu_addFriend">加入好友</string>
    <string name="et_friendMail">請輸入好友的郵箱</string>
    <string name="searchButton">searchButton</string>
    <string name="Accept">接受</string>
    <string name="reject">拒絕</string>
    <string name="applying">申請中...</string>
    <string name="btnAddFood">新增食物</string>
</resources>