<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    //Below Starting Bottom Navigation Fragment
    <fragment
        android:id="@+id/nav_home"
        android:label="@string/home"
        android:name="com.odstudio.ourdiet.ui.home.HomeFragment"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_food"
        android:label="@string/food"
        android:name="com.odstudio.ourdiet.ui.food.FoodFragment"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/nav_friends"
        android:label="@string/friends"
        android:name="com.odstudio.ourdiet.ui.friends.FriendsFragment"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/nav_groups"
        android:label="@string/groups"
        android:name="com.odstudio.ourdiet.ui.groups.GroupsFragment"
        tools:layout="@layout/fragment_groups" />
</navigation>